05270343-优化功能